style: adjust CSS for MailForm and SearchBar components; improve layout and spacing fix: update database password in environment configuration

--- a/client/src/assets/modules/SearchBarHomePage.module.css
+++ b/client/src/assets/modules/SearchBarHomePage.module.css
@@ -18,6 +18,7 @@
     color: rgb(60, 60, 60);
 }
 
+
 .button {
     font-size: 30px;
     border: none;
@@ -30,7 +31,8 @@
     background-size: 200% 100%;
     transition: color 0.3s ease;
     position: relative;
-    right: -20px;
+    right: 0px;
+    margin-right: -12px;
 
 }
 
